--- a/server/src/Makefile
+++ b/server/src/Makefile
@@ -1,6 +1,7 @@
 SHELL := /bin/bash
 DEFAULT = help
 
+BINARY = scriflow-server
 PROJECTPATH = $(pwd)/
 BUILDPATH = $(pwd)build/
 
@@ -23,25 +24,23 @@ help:
 run:
 	make build
 	
-	$(shell rm -dfr $(BUILDPATH) )
-	
 	@echo "Running debug version from build folder"
 	$(shell mkdir -p $(BUILDPATH))
 
 	# copy executable to build dir
-	$(Q)$(shell mv src/onlinedtp $(BUILDPATH)) 	
+	$(Q)$(shell mv src/$(BINARY) $(BUILDPATH)) 	
 	$(Q)$(shell cp -r src/templates/ $(BUILDPATH))
 
 	# cd into it and run scaffold init 
-	$(shell cd $(BUILDPATH) && ./onlinedtp) 
+	$(shell cd $(BUILDPATH) && ./$(BINARY)) 
 	
 build:
 	@echo "Building using $(BUILDER)..."
-	$(Q)$(shell cd src/  && $(BUILDER) build)
+	$(Q)$(shell $(BUILDER) -o $(BINARY) build)
 	@echo "Moving binary into build directory"
 
-	$(Q)$(shell mkdir -p $(BUILDPATH))
-	$(Q)$(shell mv src/onlinedtp $(BUILDPATH))
+	$(Q)$(shell mkdir -p build/)
+	$(Q)$(shell mv $(BINARY) build/)
 
 clean-build:
 	@echo "Cleaning build folder... $(BUILDPATH)"
